# rust-hypervisor-firmware

./: Cargo.toml  README.md
efi-str/: Cargo.toml
efi-str/src/: lib.rs  os_str.rs
r-efi/src/: base.rs
r-efi/src/protocols/: device_path.rs
src/: block.rs  calloc.rs  common.rs  efi.rs  fat.rs  loader.rs  logger.rs  main.rs  mem.rs  part.rs  pci.rs  pe.rs
src/efi/: alloc.rs  block.rs  conout.rs  device_path.rs  file.rs  handle_database.rs  image.rs  init.rs  mod.rs  peloader.rs  variable.rs
src/pi/: hob.rs  hob_lib.rs
