[package]
name = "payload-efi"
version = "0.0.1"
authors = ["Jiewen Yao <jiewen.yao@intel.com>"]
edition = "2018"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
cpuio = "0.3.0"
spin = "0.4.9"
r-efi = {path = "r-efi"}
efi-str = { path = "efi-str" }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

